--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".ui.MainActivity"/>
+
+        <activity android:name=".ui.demo.DemoSwipBackActivity" android:theme="@style/TransparentTheme"/>
     </application>
 
 </manifest>
