--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.demo.DemoActivity">
+        <activity android:name=".ui.invitationList.InvitationActivity"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.MainActivity"/>
-        <activity android:name=".ui.Insist.InsistActivity"/>
-
-        <activity android:name=".ui.demo.DemoSwipBackActivity" android:theme="@style/TransparentTheme"/>
+        <activity android:name=".ui.MainActivity">
+        </activity>
+        <activity android:name=".ui.invitationList.InvitationDetailsActivity"
+                   android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
