--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.invitationList.InvitationActivity"
+        <activity android:name=".ui.demo.DemoActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +24,8 @@
         </activity>
 
         <activity android:name=".ui.MainActivity">
+        </activity>
+        <activity android:name=".ui.Insist.InsistActivity">
         </activity>
         <activity android:name=".ui.invitationList.InvitationDetailsActivity"
                    android:theme="@style/AppTheme"/>
