--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,15 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.invitationList.InvitationActivity"
             android:theme="@style/AppTheme">
+
+        </activity>
+
+        <activity android:name=".ui.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ui.MainActivity">
-        </activity>
-        <activity android:name=".ui.invitationList.InvitationDetailsActivity"
-                   android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
