--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,21 +15,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.invitationList.InvitationActivity"
+        <activity android:name=".ui.demo.DemoActivity"
             android:theme="@style/AppTheme">
 
         </activity>
 
-        <activity android:name=".ui.home.HomeActivity">
+        <activity android:name=".ui.Insist.InsistActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.invitationList.InvitationActivity">
         </activity>
-        <activity android:name=".ui.Insist.InsistActivity">
+        <activity android:name=".ui.home.HomeActivity">
         </activity>
         <activity android:name=".ui.invitationList.InvitationDetailsActivity"
                    android:theme="@style/AppTheme"/>
