--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,8 @@ dependencies {
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
     //superSwipeRefreshLayout recyclerView刷新库
     compile project(':superSwipeRefreshLayoutModule')
+    //上传头像类库
+    compile 'com.github.Tinlok:SelectAvatarApplication:0.3'
+   //Material Design 控件库
+    compile 'com.github.rey5137:material:1.2.4'
 }
