--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,5 +99,5 @@ dependencies {
     //上传头像类库
     compile 'com.github.Tinlok:SelectAvatarApplication:0.3'
    //Material Design 控件库
-    compile 'com.github.rey5137:material:1.2.4'
+   // compile 'com.github.rey5137:material:1.2.4'
 }
