主界面跳转

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,14 +27,16 @@
         <activity android:name=".ui.invitationList.InvitationActivity">
         </activity>
         <activity android:name=".ui.myconcern.MyConcernActivity">
+
+        </activity>
+        <activity android:name=".ui.invitationList.InvitationDetailsActivity"
+                   android:theme="@style/AppTheme"/>
+        <activity android:name=".ui.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.invitationList.InvitationDetailsActivity"
-                   android:theme="@style/AppTheme"/>
-        <activity android:name=".ui.home.HomeActivity"></activity>
     </application>
     <supports-screens
         android:smallScreens="true"
