--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,7 +97,9 @@ dependencies {
     //superSwipeRefreshLayout recyclerView刷新库
     compile project(':superSwipeRefreshLayoutModule')
     //上传头像类库
-    compile 'com.github.Tinlok:SelectAvatarApplication:0.3'
+    compile 'com.github.Tinlok:SelectAvatarApplication:1.0'
    //Material Design 控件库
     compile 'com.github.rey5137:material:1.2.4'
+
+    compile 'com.bartoszlipinski.recyclerviewheader:library:1.2.0'
 }
