我的关注更新代码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.invitationList.InvitationDetailsActivity"
+                   android:theme="@style/AppTheme"/>
+        <activity android:name=".ui.userInformation.UserInformationActivity">
+
+        </activity>
     </application>
     <supports-screens
         android:smallScreens="true"
