--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,58 +116,44 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.0'
     compile 'com.android.support:recyclerview-v7:24.2.0'
     testCompile 'junit:junit:4.12'
-
     //注解库，省去findId
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-
     //rxjava
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
-
     //retrofit2
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.cm.retrofit2:converter-file:1.0.1'
-
     //Gson
     compile 'com.google.code.gson:gson:2.6.2'
-
     //facebook图片处理库
     compile 'com.facebook.fresco:fresco:0.10.0'
-    compile "com.facebook.fresco:imagepipeline-okhttp3:0.10.0"
+    compile 'com.facebook.fresco:imagepipeline-okhttp3:0.10.0'
     compile 'com.facebook.fresco:animated-gif:0.10.0'
-
     //recyclerview的adapter封装
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.9.7'
-
     //material dialog样式，兼容4.0以上
     compile('com.github.afollestad.material-dialogs:core:0.8.5.2@aar') {
         transitive = true
     }
-
     //缓存数据
     compile 'com.anupcowkur:reservoir:3.1.0'
-
     //square的图片处理库：轻量级
     compile 'com.squareup.picasso:picasso:2.5.2'
-
     //Okhttp
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
     compile 'com.zhy:okhttputils:2.6.2'
-
     //circularReval动画兼容库4.0以上
-    compile ('com.github.ozodrukh:CircularReveal:2.0.1@aar') {
+    compile('com.github.ozodrukh:CircularReveal:2.0.1@aar') {
         transitive = true;
     }
-
     //material样式日历
     compile 'com.prolificinteractive:material-calendarview:1.4.0'
-
     //抽屉动画
     compile 'com.github.ozodrukh:CircularReveal:1.0.4'
-
     //滑动返回
     compile 'me.imid.swipebacklayout.lib:library:1.0.0'
 
@@ -176,7 +162,6 @@ dependencies {
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
     //superSwipeRefreshLayout recyclerView刷新库
     compile project(':superSwipeRefreshLayoutModule')
-
     //eventbus传播信息库
     compile 'org.greenrobot:eventbus:3.0.0'
     //上传头像类库
