--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,13 +102,21 @@ android {
 
 repositories {
     jcenter()
+    flatDir {
+        dirs 'libs'
+    }
 }
+
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //短信
+    compile name: 'SMSSDK-2.1.1', ext: 'aar'
+    compile name: 'SMSSDKGUI-2.1.1', ext: 'aar'
+
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:support-v4:24.2.0'
     compile 'com.android.support:support-v13:24.2.0'
@@ -158,7 +166,7 @@ dependencies {
     compile 'com.zhy:okhttputils:2.6.2'
 
     //circularReval动画兼容库4.0以上
-    compile ('com.github.ozodrukh:CircularReveal:2.0.1@aar') {
+    compile('com.github.ozodrukh:CircularReveal:2.0.1@aar') {
         transitive = true;
     }
 
@@ -170,8 +178,6 @@ dependencies {
 
     //滑动返回
     compile 'me.imid.swipebacklayout.lib:library:1.0.0'
-
-
 
     //PhotoView
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
