--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,20 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!--UMENG-PERMISSION-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <!--SMS 权限-->
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".MyApplication"
@@ -20,36 +32,53 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.demo.DemoActivity"
+        <activity
+            android:name=".ui.demo.DemoActivity"
             android:theme="@style/AppTheme">
+
+        </activity>
+
+        <activity android:name=".ui.login.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--SMS 页面-->
+        <activity
+            android:name="com.mob.tools.MobUIShell"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
 
-        <activity android:name=".ui.invitation.InvitationActivity">
-        </activity>
 
-        <activity android:name=".ui.insist.InsistActivity"/>
-        <activity android:name=".ui.invitationList.InvitationActivity"/>
-        <activity android:name=".ui.myconcern.MyConcernActivity"/>
-        <activity android:name=".ui.invitationList.InvitationDetailsActivity"
-                   android:theme="@style/AppTheme"/>
-        <activity android:name=".ui.home.HomeActivity"/>
-        <activity android:name=".ui.userInformation.UserInformationActivity"/>
+        <activity android:name=".ui.invitationList.InvitationActivity" />
+        <activity android:name=".ui.myconcern.MyConcernActivity" />
+        <activity
+            android:name=".ui.invitationList.InvitationDetailsActivity"
+            android:theme="@style/AppTheme" />
+
+
+        <activity android:name=".ui.home.HomeActivity" />
+        <activity android:name=".ui.userInformation.UserInformationActivity" />
         <service android:name=".util.filedownload.DownLoadService"/>
 
         <!--友盟推送和多渠道打包-->
-        <meta-data android:name="UMENG_APPKEY" android:value="57e7497e67e58ec83a000f50" />
-        <meta-data android:name="UMENG_CHANNEL" android:value="${UMENG_CHANNEL_VALUE}" />
-        <meta-data android:name="UMENG_MESSAGE_SECRET" android:value="cada5ffbf76e4cb9341c0b80ea7ff8d9"/>
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="57e7497e67e58ec83a000f50" />
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="${UMENG_CHANNEL_VALUE}" />
+        <meta-data
+            android:name="UMENG_MESSAGE_SECRET"
+            android:value="cada5ffbf76e4cb9341c0b80ea7ff8d9" />
     </application>
 
     <supports-screens
-        android:smallScreens="true"
-        android:normalScreens="true"
+        android:anyDensity="true"
         android:largeScreens="true"
+        android:normalScreens="true"
         android:resizeable="true"
-        android:anyDensity="true" />
+        android:smallScreens="true" />
 </manifest>
