--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'android-apt'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 23
+    buildToolsVersion '23.0.3'
     defaultConfig {
         applicationId "com.example.vizax.with"
         minSdkVersion 15
@@ -109,14 +109,13 @@ repositories {
 
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //短信
     compile name: 'SMSSDK-2.1.1', ext: 'aar'
     compile name: 'SMSSDKGUI-2.1.1', ext: 'aar'
-
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:support-v4:24.2.0'
     compile 'com.android.support:support-v13:24.2.0'
@@ -164,8 +163,6 @@ dependencies {
     compile 'com.github.ozodrukh:CircularReveal:1.0.4'
     //滑动返回
     compile 'me.imid.swipebacklayout.lib:library:1.0.0'
-
-
     //PhotoView
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
     //superSwipeRefreshLayout recyclerView刷新库
