邀约列表更新

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,10 +39,6 @@
         </activity>
 
         <activity android:name=".ui.login.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <!--SMS 页面-->
         <activity
@@ -59,7 +55,13 @@
             android:theme="@style/AppTheme" />
 
 
-        <activity android:name=".ui.home.HomeActivity" />
+        <activity android:name=".ui.home.HomeActivity" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+        <activity android:name=".ui.invitation.LuanchInvitationActivity"/>
         <activity android:name=".ui.userInformation.UserInformationActivity" />
         <service android:name=".util.filedownload.DownLoadService"/>
 
