--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:name=".MyApplication"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@drawable/umeng_push_notification_default_large_icon"
         android:label="@string/app_name"
@@ -39,6 +39,10 @@
         </activity>
 
         <activity android:name=".ui.login.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <!--SMS 页面-->
         <activity
@@ -56,10 +60,6 @@
 
 
         <activity android:name=".ui.home.HomeActivity" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
         </activity>
         <activity android:name=".ui.invitation.LuanchInvitationActivity"/>
         <activity android:name=".ui.userInformation.UserInformationActivity" />
