--- a/app/build.gradle
+++ b/app/build.gradle
@@ -243,4 +243,7 @@ dependencies {
     //UMENG
     compile 'com.umeng.analytics:analytics:latest.integration'
     compile project(':PushSDK')
+
+    //侧滑删除
+    compile 'com.yanzhenjie:recyclerview-swipe:1.0.2'
 }
