--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:icon="@drawable/umeng_push_notification_default_large_icon"
+        android:icon="@drawable/with"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
