--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,17 @@
         <activity android:name=".ui.invitation.EditInvitationActivity"/>
         <service android:name=".util.filedownload.DownLoadService"/>
 
+        <!--相册选择-->
+        <activity
+            android:name="cn.finalteam.rxgalleryfinal.ui.activity.MediaActivity"
+            android:screenOrientation="portrait"
+            android:exported="true"
+            android:theme="@style/AppTheme"/>
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"/>
+
         <!--友盟推送和多渠道打包-->
         <meta-data
             android:name="UMENG_APPKEY"
