--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
         </activity>
         <activity android:name=".ui.invitationList.InvitationActivity" />
         <activity android:name=".ui.myconcern.MyConcernActivity" />
-        <activity android:name=".ui.mymessage.MyMessageActivity" />
+        <activity android:name=".ui.mymessage.MyMessageActivity"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".ui.invitationList.InvitationDetailsActivity"
             android:theme="@style/AppTheme" />
@@ -57,6 +58,7 @@
         <activity android:name=".ui.changpsw.ChangePswActivity" />
         <activity android:name=".ui.Insist.InsistActivity" />
         <activity android:name=".ui.userInformation.UserInformationActivity" />
+        <activity android:name=".ui.about.AboutActivity" />
         <activity android:name=".ui.intro.MainIntoActivity"
             android:theme="@style/Theme.Intro">
         </activity>
