--- a/app/build.gradle
+++ b/app/build.gradle
@@ -231,7 +231,7 @@ dependencies {
     //滑动返回
     compile 'me.imid.swipebacklayout.lib:library:1.0.0'
     //PhotoView
-    compile 'com.github.chrisbanes:PhotoView:1.3.0'
+    //compile 'com.github.chrisbanes:PhotoView:1.3.0'
     //superSwipeRefreshLayout recyclerView刷新库
     compile project(':superSwipeRefreshLayoutModule')
     //eventbus传播信息库
